cmake_minimum_required(VERSION 3.23)
project(projet_quoridor_ing3_2024_ing3_quoridor_2024_s01_33 C)

set(CMAKE_C_STANDARD 11)

add_executable(projet_quoridor_ing3_2024_ing3_quoridor_2024_s01_33
        premiere_partie_mirina.c
        header_premiere_partie_mirina.h
        main_début_partie_mirina.c
        main.c)
